[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rgevolve.wet-3.flavio"
authors = [
    {name = "Aleks SmolkoviÄ", email = "aleks.smolkovic@ijs.si"},
    {name = "Peter Stangl", email = "peter.stangl@cern.ch"},
]
description = "Package providing Renormalization Group Evolution Matrices for the WET-3 in the flavio basis"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "rgevolve"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["rgevolve.wet-3.flavio"]

[tool.setuptools.dynamic]
version = {attr = "rgevolve.wet-3.flavio._version.__version__"}

[tool.setuptools.package-data]
"rgevolve.wet-3.flavio" = ["data.h5"]
