[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rgevolve.wet_3.flavio"
authors = [
    {name = "Aleks Smolkovič", email = "aleks.smolkovic@ijs.si"},
    {name = "Peter Stangl", email = "peter.stangl@cern.ch"},
]
description = "Package providing Renormalization Group Evolution Matrices for the WET-3 in the flavio basis"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "rgevolve-core"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["rgevolve.wet_3.flavio"]

[tool.setuptools_scm]
version_file = "src/rgevolve/wet_3/flavio/_version.py"

[tool.setuptools.package-data]
"rgevolve.wet_3.flavio" = ["data.h5"]
